# rust-web-programming-examples

./: .gitignore  README.md
chapter_02/minimal_web_server/: Cargo.toml
chapter_02/minimal_web_server/src/: main.rs
chapter_02/question/src/: main.rs
chapter_03/first_warp_web_server/: Cargo.toml
chapter_03/first_warp_web_server/src/: main.rs
chapter_04/rest_server/: Cargo.toml
chapter_04/rest_server/src/: main.rs
chapter_05/rest_server/: Cargo.toml
chapter_05/rest_server/src/types/: mod.rs
chapter_06/: README.md
chapter_06/rest_server/: Cargo.toml
chapter_06/rest_server/src/: main.rs
chapter_06/rest_server/src/routes/: answer.rs  question.rs
chapter_06/rest_server/src/types/: pagination.rs
chapter_07/: README.md
chapter_07/rest_server/: Cargo.toml  docker-compose.yml
chapter_07/rest_server/src/: main.rs  store.rs
chapter_07/rest_server/src/routes/: answer.rs
chapter_07/rest_server/src/types/: pagination.rs  question.rs
chapter_07/warp_error_handlers/: Cargo.toml
chapter_07/warp_error_handlers/src/: lib.rs
chapter_08/: README.md
chapter_08/error_handlers/: Cargo.toml
chapter_08/http_client_spike/: Cargo.toml
chapter_08/http_client_spike/src/: main.rs
chapter_08/rest_server/: Cargo.toml
chapter_08/rest_server/src/: main.rs  profanity.rs  store.rs
chapter_08/rest_server/src/routes/: answer.rs
chapter_08/rest_server/src/types/: answer.rs  pagination.rs
chapter_08/warp_error_handlers/: Cargo.toml
chapter_09/: README.md
chapter_09/rest_server/: .env.template  Cargo.toml
chapter_09/rest_server/src/: main.rs  store.rs
chapter_09/rest_server/src/routes/: authentication.rs  mod.rs
chapter_10/: Dockerfile  README.md  docker-compose.yml
chapter_10/rest_server/: Cargo.toml
chapter_10/rest_server/src/: main.rs
chapter_10/rest_server/src/types/: mod.rs
chapter_11/: README.md
chapter_11/error_handlers/: Cargo.toml
chapter_11/mock_server/: Cargo.toml
chapter_11/mock_server/src/: lib.rs
chapter_11/rest_server/: Cargo.toml  setup.toml
chapter_11/rest_server/db/: init.sql
chapter_11/rest_server/src/: config.rs  main.rs  profanity.rs  store.rs
chapter_11/rest_server/src/routes/: authentication.rs  question.rs
chapter_11/rest_server/src/types/: pagination.rs
