[package]
name = "http_client_spike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37", features = ["full"] }
reqwest = "0.12.4"
dotenv = "0.15.0"
log = "0.4.21"
env_logger = "0.11"
log4rs = "1.3"