[package]
name = "rest_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
# We can omit the version number for local imports
error_handlers = { path = "../error_handlers" }
mock_server = { path = "../mock_server" }
log = "0.4"
env_logger = "0.11"
log4rs = "1.3"
uuid = { version = "1.8.0", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "migrate", "postgres"] }
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.5"
dotenv = "0.15.0"
rand = "0.8"
rust-argon2 = "1.0.1"
paseto = "2.0"
chrono = "0.4.19"
config = { version = "0.14", features = ["toml"] }
clap = { version = "3.1.7", features = ["derive"] }
proc-macro2 = "1.0.37"
openssl = { version = "0.10.32", features = ["vendored"] }

[build-dependencies]
platforms = "2.0.0"

